added key clicking, working audio, and proper element alignment

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <div class="flex-key">test</div>
     <h1>My <span class='red'>R</span><span class='orange'>a</span><span class='yellow'>i</span><span class='green'>n</span><span class='blue'>b</span><span class='indigo'>o</span><span class='violet'>w</span> Piano</h1>
     <div class='piano-container'>
+      <div class='black-key-container flex'>
+        <div data-trigger="e" data-key='c#' class='black-key c-sharp flex-key'>E</div>
+        <div data-trigger="r" data-key='d#' class='black-key d-sharp flex-key'>R</div>
+        <div data-trigger="y" data-key='f#' class='black-key f-sharp flex-key'>Y</div>
+        <div data-trigger="u" data-key='g#' class='black-key g-sharp flex-key'>U</div>
+        <div data-trigger="i" data-key='a#' class='black-key a-sharp flex-key'>I</div>
+      </div>
       <div class='white-key-container flex'>
-        <div data-key='c' class='white-key c flex-key'>S</div>
-        <div data-key='d' class='white-key d flex-key'>D</div>
-        <div data-key='e' class='white-key e flex-key'>F</div>
-        <div data-key='f' class='white-key f flex-key'>G</div>
-        <div data-key='g' class='white-key g flex-key'>H</div>
-        <div data-key='a' class='white-key a flex-key'>J</div>
-        <div data-key='b' class='white-key b flex-key'>K</div>
+        <div data-trigger="s" data-key='c' class='white-key c flex-key'>S</div>
+        <div data-trigger="d" data-key='d' class='white-key d flex-key'>D</div>
+        <div data-trigger="f" data-key='e' class='white-key e flex-key'>F</div>
+        <div data-trigger="g" data-key='f' class='white-key f flex-key'>G</div>
+        <div data-trigger="h" data-key='g' class='white-key g flex-key'>H</div>
+        <div data-trigger="j" data-key='a' class='white-key a flex-key'>J</div>
+        <div data-trigger="k" data-key='b' class='white-key b flex-key'>K</div>
       </div>
 
-      <div class='black-key-container flex'>
-        <div data-key='c#' class='black-key c-sharp flex-key'>E</div>
-        <div data-key='d#' class='black-key d-sharp flex-key'>R</div>
-        <div class='clear-key'></div>
-        <div data-key='f#' class='black-key f-sharp flex-key'>Y</div>
-        <div data-key='g#' class='black-key g-sharp flex-key'>U</div>
-        <div data-key='a#' class='black-key a-sharp flex-key'>I</div>
-      </div>
+
     </div>
 
     <script src='./main.js'></script>
